chore(appContext): initial i18n integration

--- a/src/@littleware/little-elements/common/appContext/i18n/en.json
+++ b/src/@littleware/little-elements/common/appContext/i18n/en.json
@@ -1,6 +1,8 @@
 {
-    "ok": "ok",
-    "cancel": "cancel",
-    "login": "login",
-    "logout": "logout"
+    "little-elements": {
+        "ok": "ok",
+        "cancel": "cancel",
+        "login": "login",
+        "logout": "logout"
+    }
 }
