chore(i18n): basic test passes

--- a/src/@littleware/little-elements/common/appContext/i18n/en.json
+++ b/src/@littleware/little-elements/common/appContext/i18n/en.json
@@ -3,6 +3,7 @@
         "ok": "ok",
         "cancel": "cancel",
         "login": "login",
-        "logout": "logout"
+        "logout": "logout",
+        "jasmine-test": "for the test case"
     }
 }
