chore(i18n): more fixes

--- a/src/@littleware/little-elements/common/appContext/i18n/en.json
+++ b/src/@littleware/little-elements/common/appContext/i18n/en.json
@@ -1,9 +1,12 @@
 {
+    "translation": {
+        "test": "whatever"
+    },
     "little-elements": {
         "ok": "ok",
         "cancel": "cancel",
         "login": "login",
         "logout": "logout",
-        "jasmine-test": "for the test case"
+        "test": "for the test case"
     }
 }
