chore(menu): drop down pass basic tests

--- a/src/@littleware/little-elements/common/appContext/i18n/en.json
+++ b/src/@littleware/little-elements/common/appContext/i18n/en.json
@@ -3,10 +3,11 @@
         "test": "whatever"
     },
     "little-elements": {
-        "ok": "ok",
+        "accountInfo": "Account Info",
         "cancel": "cancel",
         "login": "login",
         "logout": "logout",
+        "ok": "ok",
         "test": "for the test case"
     }
 }
