chore(authMgr): passes basic test

--- a/src/@littleware/little-elements/common/appContext/i18n/en.json
+++ b/src/@littleware/little-elements/common/appContext/i18n/en.json
@@ -4,10 +4,12 @@
     },
     "little-elements": {
         "accountInfo": "Account Info",
-        "cancel": "cancel",
-        "login": "login",
-        "logout": "logout",
-        "ok": "ok",
+        "cancel": "Cancel",
+        "login": "Singn In",
+        "logout": "Sign Out",
+        "anonymous": "anonymous",
+        "userinfo": "User Info",
+        "ok": "Ok",
         "test": "for the test case"
     }
 }
