chore(nodedev): extract gulpHelper

--- a/src/@littleware/little-elements/common/appContext/i18n/en.json
+++ b/src/@littleware/little-elements/common/appContext/i18n/en.json
@@ -5,7 +5,7 @@
     "little-elements": {
         "accountInfo": "Account Info",
         "cancel": "Cancel",
-        "login": "Singn In",
+        "login": "Sign In",
         "logout": "Sign Out",
         "anonymous": "anonymous",
         "userinfo": "User Info",
